--- a/index.html
+++ b/index.html
@@ -1,483 +1,211 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Rumi Café Menu</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Rumi Café</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
-  :root{
-    --bg1:#15021f;
-    --bg2:#2a0b3a;
-    --glass: rgba(255,255,255,0.10);
-    --glass2: rgba(255,255,255,0.06);
-    --line: rgba(255,255,255,0.22);
-    --line2: rgba(255,255,255,0.12);
-    --text: rgba(255,255,255,0.92);
-    --muted: rgba(255,255,255,0.70);
-    --shadow: 0 25px 80px rgba(0,0,0,0.55);
-  }
+:root{
+  /* Match your QR / Dervish card scheme */
+  --bg1:#14051f;          /* deep purple */
+  --bg2:#2a0b3a;          /* rich purple */
+  --bg3:#3b0f57;          /* accent purple */
 
-  *{ box-sizing:border-box }
-  html{ scroll-behavior:smooth }
-  body{
-    margin:0;
-    font-family:Poppins, system-ui, -apple-system, Segoe UI, Arial, sans-serif;
-    color:var(--text);
-    min-height:100vh;
-    overflow-x:hidden;
-    background: radial-gradient(1200px 700px at 70% 25%, rgba(255,120,220,0.25), transparent 55%),
-                radial-gradient(900px 600px at 20% 20%, rgba(180,90,255,0.22), transparent 55%),
-                linear-gradient(180deg, var(--bg1), var(--bg2));
-  }
+  --gold:#f3c77a;         /* soft gold */
+  --gold2:#e0b96c;        /* deeper gold */
+  --goldLine:rgba(243,199,122,0.55);
 
-  /* ===== Starfield (no image needed) ===== */
-  .stars, .stars::before, .stars::after{
-    position:fixed;
-    inset:-200px;
-    content:"";
-    pointer-events:none;
-    background-repeat:repeat;
-    opacity:0.85;
-    filter: blur(0.2px);
-  }
-  .stars{
-    background-image:
-      radial-gradient(1px 1px at 20px 30px, rgba(255,255,255,.75), transparent 60%),
-      radial-gradient(1px 1px at 110px 80px, rgba(255,255,255,.65), transparent 60%),
-      radial-gradient(1px 1px at 70px 140px, rgba(255,255,255,.55), transparent 60%),
-      radial-gradient(2px 2px at 160px 40px, rgba(255,255,255,.35), transparent 65%);
-    background-size: 220px 220px;
-    animation: starDrift 24s linear infinite;
-  }
-  .stars::before{
-    background-image:
-      radial-gradient(1px 1px at 30px 90px, rgba(255,255,255,.55), transparent 60%),
-      radial-gradient(2px 2px at 180px 160px, rgba(255,255,255,.28), transparent 65%),
-      radial-gradient(1px 1px at 140px 10px, rgba(255,255,255,.50), transparent 60%);
-    background-size: 260px 260px;
-    opacity:0.55;
-    animation: starDrift 34s linear infinite reverse;
-  }
-  .stars::after{
-    background-image:
-      radial-gradient(1px 1px at 95px 60px, rgba(255,255,255,.45), transparent 60%),
-      radial-gradient(2px 2px at 210px 120px, rgba(255,255,255,.22), transparent 65%);
-    background-size: 320px 320px;
-    opacity:0.35;
-    animation: starDrift 44s linear infinite;
-  }
-  @keyframes starDrift{
-    from{ transform:translate3d(0,0,0) }
-    to{ transform:translate3d(-80px,55px,0) }
-  }
+  --text:rgba(255,255,255,0.92);
+  --muted:rgba(255,255,255,0.70);
 
-  /* ===== Loading overlay ===== */
-  .loaderWrap{
-    position:fixed; inset:0;
-    display:flex; align-items:center; justify-content:center;
-    background: rgba(12,2,18,0.92);
-    z-index:9999;
-    transition: opacity .45s ease, visibility .45s ease;
-  }
-  .loaderWrap.hide{ opacity:0; visibility:hidden; }
-  .loader{
-    width:56px; height:56px;
-    border-radius:999px;
-    border:4px solid rgba(255,255,255,0.14);
-    border-top-color: rgba(255,255,255,0.9);
-    animation: spin .9s linear infinite;
-  }
-  @keyframes spin{ to{ transform:rotate(360deg) } }
+  --glass:rgba(255,255,255,0.07);
+  --line:rgba(255,255,255,0.14);
 
-  /* ===== Layout ===== */
-  .wrap{
-    width:min(980px, calc(100% - 28px));
-    margin:0 auto;
-    padding:42px 0 80px;
-  }
+  --shadow:0 28px 80px rgba(0,0,0,0.55);
+}
 
-  /* fade-in page */
-  .page{
-    opacity:0;
-    transform: translateY(10px);
-    transition: opacity 650ms ease, transform 650ms ease;
-  }
-  .page.loaded{ opacity:1; transform: translateY(0); }
+*{box-sizing:border-box}
+html{scroll-behavior:smooth}
+body{
+  margin:0;
+  font-family:Poppins, sans-serif;
+  color:var(--text);
+  overflow-x:hidden;
 
-  /* ===== Main glass card (like your sample) ===== */
-  .heroCard{
-    position:relative;
-    border-radius:30px;
-    padding:56px 22px 44px;
-    background: linear-gradient(180deg, rgba(255,255,255,0.12), rgba(255,255,255,0.06));
-    border:1px solid var(--line);
-    box-shadow: var(--shadow);
-    backdrop-filter: blur(16px);
-    overflow:hidden;
-    text-align:center;
-  }
+  /* Starry / elegant purple like your sample */
+  background:
+    radial-gradient(900px 600px at 70% 15%, rgba(170,80,220,0.20), transparent 55%),
+    radial-gradient(850px 650px at 25% 75%, rgba(90,30,140,0.22), transparent 60%),
+    linear-gradient(180deg, var(--bg1), var(--bg2));
+}
 
-  /* subtle inner glow */
-  .heroCard::before{
-    content:"";
-    position:absolute; inset:-120px;
-    background:
-      radial-gradient(circle at 40% 15%, rgba(255,255,255,0.18), transparent 45%),
-      radial-gradient(circle at 70% 80%, rgba(255,140,220,0.16), transparent 55%);
-    filter: blur(22px);
-    opacity:0.65;
-    animation: glowPulse 4.2s ease-in-out infinite;
-    pointer-events:none;
-  }
-  @keyframes glowPulse{
-    0%,100%{ transform:scale(1); opacity:0.55 }
-    50%{ transform:scale(1.06); opacity:0.9 }
-  }
+/* ===== Subtle sparkle particles (gold/white) ===== */
+.particles{
+  position:fixed;
+  inset:-200px;
+  pointer-events:none;
+  opacity:.55;
+  background-image:
+    radial-gradient(circle at 20% 30%, rgba(243,199,122,0.14) 0 2px, transparent 2px),
+    radial-gradient(circle at 70% 40%, rgba(255,255,255,0.10) 0 1px, transparent 1px),
+    radial-gradient(circle at 55% 78%, rgba(243,199,122,0.10) 0 2px, transparent 2px),
+    radial-gradient(circle at 35% 60%, rgba(255,255,255,0.08) 0 1px, transparent 1px);
+  background-size: 240px 240px, 180px 180px, 280px 280px, 220px 220px;
+  animation: drift 20s linear infinite;
+}
+@keyframes drift{
+  from{transform:translate3d(0,0,0)}
+  to{transform:translate3d(-80px,55px,0)}
+}
 
-  /* top sparkle line like sample */
-  .spark{
-    position:absolute;
-    top:32px;
-    left:18%;
-    width:64%;
-    height:1px;
-    background: linear-gradient(90deg, transparent, rgba(255,255,255,0.55), transparent);
-    opacity:0.65;
-  }
-  .spark::after{
-    content:"";
-    position:absolute;
-    left:22%;
-    top:-6px;
-    width:14px; height:14px;
-    border-radius:50%;
-    background: radial-gradient(circle, rgba(255,255,255,0.9), transparent 60%);
-    filter: blur(0.2px);
-  }
+/* ===== Loading Screen ===== */
+.loaderWrap{
+  position:fixed; inset:0;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:rgba(12,2,18,0.92);
+  z-index:9999;
+  transition: opacity .45s ease, visibility .45s ease;
+}
+.loaderWrap.hide{ opacity:0; visibility:hidden; }
+.loader{
+  width:56px; height:56px;
+  border-radius:999px;
+  border:4px solid rgba(255,255,255,0.14);
+  border-top-color: var(--gold);
+  animation: spin 0.9s linear infinite;
+}
+@keyframes spin{to{transform:rotate(360deg)}}
 
-  /* Logo image (your logo.jpeg) */
-  .logo{
-    position:relative;
-    z-index:1;
-    width:min(520px, 92%);
-    height:auto;
-    margin:0 auto 14px;
-    display:block;
-    filter: drop-shadow(0 18px 40px rgba(0,0,0,0.35));
-  }
+/* ===== Layout ===== */
+.container{
+  width:min(980px, calc(100% - 26px));
+  margin:0 auto;
+  padding:38px 0 80px;
+}
 
-  .headline{
-    position:relative;
-    z-index:1;
-    margin:10px 0 6px;
-    font-weight:700;
-    font-size:34px;
-    letter-spacing:0.2px;
-  }
+/* Page fade-in */
+.page{
+  opacity:0;
+  transform: translateY(10px);
+  transition: opacity 700ms ease, transform 700ms ease;
+}
+.page.loaded{ opacity:1; transform: translateY(0); }
 
-  .sub{
-    position:relative;
-    z-index:1;
-    margin:0 0 18px;
-    color:var(--muted);
-    font-size:16px;
-  }
+/* ===== Premium Card ===== */
+.card{
+  width:min(540px, 100%);
+  margin:0 auto;
+  padding:52px 30px 34px;
+  border-radius:28px;
+  background: linear-gradient(180deg, rgba(255,255,255,0.09), rgba(255,255,255,0.05));
+  backdrop-filter: blur(18px);
+  border:1px solid rgba(255,255,255,0.16);
+  box-shadow: var(--shadow);
+  text-align:center;
+  position:relative;
+  overflow:hidden;
+}
 
-  .loc{
-    position:relative;
-    z-index:1;
-    margin:0 0 26px;
-    color: rgba(255,255,255,0.78);
-    font-size:14px;
-  }
+/* Golden glow + border accents */
+.glow{
+  position:absolute;
+  inset:-140px;
+  background:
+    radial-gradient(circle at 35% 18%, rgba(243,199,122,0.18), transparent 45%),
+    radial-gradient(circle at 70% 82%, rgba(243,199,122,0.12), transparent 55%),
+    radial-gradient(circle at 55% 55%, rgba(160,70,220,0.12), transparent 60%);
+  filter: blur(24px);
+  animation: glowPulse 4.4s ease-in-out infinite;
+  pointer-events:none;
+}
+@keyframes glowPulse{
+  0%,100%{opacity:.55; transform:scale(1)}
+  50%{opacity:.92; transform:scale(1.05)}
+}
 
-  .btnRow{
-    position:relative;
-    z-index:1;
-    display:flex;
-    justify-content:center;
-    gap:14px;
-    flex-wrap:wrap;
-    margin-top:10px;
-  }
+/* Decorative top/bottom gold line (like your card style) */
+.goldLineTop, .goldLineBottom{
+  position:absolute;
+  left:14%;
+  width:72%;
+  height:1px;
+  background: linear-gradient(90deg, transparent, var(--goldLine), transparent);
+  opacity:0.85;
+  z-index:1;
+}
+.goldLineTop{ top:22px; }
+.goldLineBottom{ bottom:22px; }
 
-  .btn{
-    appearance:none;
-    border:1px solid rgba(255,255,255,0.18);
-    background: rgba(255,255,255,0.08);
-    color: var(--text);
-    padding:14px 22px;
-    border-radius:999px;
-    font-weight:700;
-    font-size:15px;
-    text-decoration:none;
-    cursor:pointer;
-    transition: transform .18s ease, background .18s ease, border-color .18s ease, filter .18s ease;
-    min-width: 190px;
-    text-align:center;
-  }
-  .btn:hover{
-    transform: translateY(-2px);
-    background: rgba(255,255,255,0.14);
-    border-color: rgba(255,255,255,0.32);
-  }
+/* Small center ornament dot */
+.goldDot{
+  position:absolute;
+  left:50%;
+  transform:translateX(-50%);
+  width:10px;
+  height:10px;
+  border-radius:50%;
+  background: radial-gradient(circle, rgba(243,199,122,0.95), rgba(243,199,122,0.0) 70%);
+  filter: blur(0.2px);
+  opacity:0.9;
+  z-index:1;
+}
+.goldDot.top{ top:18px; }
+.goldDot.bottom{ bottom:18px; }
 
-  .btnPrimary{
-    background: rgba(255,255,255,0.92);
-    color:#2a0b3a;
-    border-color: rgba(255,255,255,0.75);
-  }
-  .btnPrimary:hover{
-    filter: brightness(1.02);
-    background: rgba(255,255,255,0.98);
-  }
+/* Dervish (no rotation, matching colors) */
+.dervish{
+  width:160px;
+  margin:0 auto 18px;
+  position:relative;
+  z-index:2;
+  opacity:0.96;
 
-  /* ===== Contact panel (opens from hero) ===== */
-  .contactPanel{
-    margin-top:18px;
-    display:none;
-    opacity:0;
-    transform: translateY(14px);
-  }
-  .contactPanel.show{
-    display:block;
-    animation: panelIn .45s ease forwards;
-  }
-  @keyframes panelIn{
-    to{ opacity:1; transform: translateY(0); }
-  }
+  /* Make it match scheme: keep purple but add elegant glow */
+  filter:
+    drop-shadow(0 18px 45px rgba(0,0,0,0.35))
+    drop-shadow(0 0 18px rgba(170,110,255,0.30))
+    drop-shadow(0 0 18px rgba(243,199,122,0.18));
+}
 
-  .contactCard{
-    border-radius:22px;
-    border:1px solid var(--line2);
-    background: rgba(255,255,255,0.06);
-    backdrop-filter: blur(14px);
-    box-shadow: 0 22px 70px rgba(0,0,0,0.40);
-    padding:14px;
-    text-align:center;
-  }
-  .contactTitle{
-    margin:6px 0 12px;
-    font-weight:800;
-    font-size:16px;
-  }
-  .contactBtns{
-    display:grid;
-    grid-template-columns: 1fr;
-    gap:10px;
-    margin-top:10px;
-  }
-  .chip{
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    gap:10px;
-    padding:13px 14px;
-    border-radius:16px;
-    text-decoration:none;
-    font-weight:800;
-    border:1px solid rgba(255,255,255,0.16);
-    background: rgba(255,255,255,0.07);
-    color: var(--text);
-    transition: transform .18s ease, background .18s ease;
-  }
-  .chip:hover{ transform: translateY(-2px); background: rgba(255,255,255,0.12); }
+/* Very soft “breathing” (not noticeable movement) */
+.dervishSoft{
+  animation: breathe 6.5s ease-in-out infinite;
+}
+@keyframes breathe{
+  0%,100%{transform:translateY(0) scale(1)}
+  50%{transform:translateY(-2px) scale(1.008)}
+}
 
-  /* ===== Menu section (fade transition) ===== */
-  .menuWrap{
-    margin-top:20px;
-    display:none;
-    opacity:0;
-    transform: translateY(18px);
-  }
-  .menuWrap.show{
-    display:block;
-    animation: menuIn .6s ease forwards;
-  }
-  @keyframes menuIn{
-    to{ opacity:1; transform: translateY(0); }
-  }
+h1{
+  margin:0;
+  font-size:34px;
+  font-weight:800;
+  letter-spacing:0.2px;
+  color:var(--gold);
+  position:relative;
+  z-index:2;
+}
+.tagline{
+  margin-top:10px;
+  color:var(--muted);
+  font-size:14px;
+  position:relative;
+  z-index:2;
+}
+.locText{
+  margin-top:10px;
+  font-size:13px;
+  color:rgba(255,255,255,0.80);
+  position:relative;
+  z-index:2;
+}
 
-  .menuCard{
-    margin-top:16px;
-    border-radius:26px;
-    border:1px solid var(--line2);
-    background: rgba(255,255,255,0.06);
-    backdrop-filter: blur(14px);
-    box-shadow: var(--shadow);
-    padding:14px;
-  }
-  .menuTop{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    gap:10px;
-    padding:6px 6px 12px;
-  }
-  .menuTitle{ margin:0; font-size:16px; font-weight:800; }
-  .backBtn{
-    text-decoration:none;
-    font-weight:800;
-    color: var(--text);
-    border:1px solid rgba(255,255,255,0.16);
-    background: rgba(255,255,255,0.06);
-    padding:10px 12px;
-    border-radius:14px;
-    transition: transform .18s ease, background .18s ease;
-  }
-  .backBtn:hover{ transform: translateY(-2px); background: rgba(255,255,255,0.12); }
-
-  .menuImg{
-    width:100%;
-    height:auto;
-    display:block;
-    border-radius:20px;
-    border:1px solid rgba(255,255,255,0.12);
-    box-shadow: 0 18px 45px rgba(0,0,0,0.34);
-    margin:14px 0;
-    background: rgba(255,255,255,0.03);
-  }
-
-  /* Sticky WhatsApp button */
-  .whatsapp{
-    position:fixed;
-    right:16px;
-    bottom:16px;
-    z-index:1000;
-    text-decoration:none;
-    display:flex;
-    align-items:center;
-    gap:10px;
-    padding:12px 14px;
-    border-radius:999px;
-    background: rgba(37, 211, 102, 0.92);
-    color:white;
-    font-weight:900;
-    border:1px solid rgba(255,255,255,0.18);
-    box-shadow: 0 18px 45px rgba(0,0,0,0.35);
-    transition: transform .18s ease, filter .18s ease;
-  }
-  .whatsapp:hover{ transform: translateY(-2px); filter: brightness(1.03); }
-
-  .footer{
-    margin-top:18px;
-    text-align:center;
-    color: rgba(255,255,255,0.60);
-    font-size:12px;
-  }
-
-  @media (max-width:520px){
-    .heroCard{ padding:44px 16px 34px; border-radius:26px; }
-    .headline{ font-size:26px; }
-    .sub{ font-size:14px; }
-    .btn{ min-width: 160px; width: 100%; }
-    .btnRow{ gap:10px; }
-    .menuTop{ flex-direction:column; align-items:flex-start; }
-    .backBtn{ width:100%; text-align:center; }
-  }
-</style>
-</head>
-
-<body>
-  <div class="stars"></div>
-
-  <!-- Loading overlay -->
-  <div class="loaderWrap" id="loader">
-    <div class="loader"></div>
-  </div>
-
-  <!-- WhatsApp floating -->
-  <a class="whatsapp" target="_blank"
-     href="https://wa.me/96898183175?text=Hello%20Rumi%20Caf%C3%A9%2C%20I%20want%20to%20order%20please.">
-    💬 WhatsApp Order
-  </a>
-
-  <main class="page" id="page">
-    <div class="wrap">
-
-      <!-- HERO / WELCOME (like your reference) -->
-      <section class="heroCard" id="top">
-        <div class="spark"></div>
-
-        <!-- Use your uploaded file name exactly: logo.jpeg -->
-        <img class="logo" src="logo.jpeg" alt="Rumi Café Logo">
-
-        <div class="headline">Welcome to Rumi Café</div>
-        <div class="sub">Where Flavor Meets Elegance</div>
-        <div class="loc">📍 Al Mawaleh</div>
-
-        <div class="btnRow">
-          <a class="btn btnPrimary" href="#menu" id="viewMenuBtn">View Menu</a>
-          <button class="btn" id="contactBtn" type="button">Contact Us</button>
-        </div>
-      </section>
-
-      <!-- CONTACT (opens when clicking Contact Us) -->
-      <div class="contactPanel" id="contactPanel">
-        <div class="contactCard">
-          <div class="contactTitle">Contact Rumi Café</div>
-          <div class="contactBtns">
-            <a class="chip" href="https://maps.app.goo.gl/or8hHa5wkgUBgxMdA" target="_blank">📍 Al Mawaleh – Location</a>
-            <a class="chip" href="https://www.instagram.com/rumi_cafee" target="_blank">📸 Instagram</a>
-            <a class="chip" href="https://wa.me/96898183175?text=Hello%20Rumi%20Caf%C3%A9%2C%20I%20want%20to%20order%20please."
-               target="_blank">💬 WhatsApp Order</a>
-          </div>
-        </div>
-      </div>
-
-      <!-- MENU (reveals with fade transition when View Menu clicked) -->
-      <div class="menuWrap" id="menuWrap">
-        <section class="menuCard" id="menu">
-          <div class="menuTop">
-            <h2 class="menuTitle">Rumi Café Menu</h2>
-            <a class="backBtn" href="#top" id="backBtn">⬆ Back to Top</a>
-          </div>
-
-          <img class="menuImg" src="1.png" alt="Menu page 1">
-          <img class="menuImg" src="2.png" alt="Menu page 2">
-        </section>
-
-        <div class="footer">© <span id="y"></span> Rumi Café</div>
-      </div>
-
-    </div>
-  </main>
-
-<script>
-  // Loading overlay hide
-  window.addEventListener("load", () => {
-    document.getElementById("loader").classList.add("hide");
-    document.getElementById("page").classList.add("loaded");
-    document.getElementById("y").textContent = new Date().getFullYear();
-  });
-
-  // Contact toggle
-  const contactBtn = document.getElementById("contactBtn");
-  const contactPanel = document.getElementById("contactPanel");
-  contactBtn.addEventListener("click", () => {
-    contactPanel.classList.toggle("show");
-    if (contactPanel.classList.contains("show")) {
-      contactPanel.scrollIntoView({behavior:"smooth", block:"start"});
-    }
-  });
-
-  // View menu (fade reveal + scroll)
-  const viewMenuBtn = document.getElementById("viewMenuBtn");
-  const menuWrap = document.getElementById("menuWrap");
-  viewMenuBtn.addEventListener("click", (e) => {
-    e.preventDefault();
-    menuWrap.classList.add("show");
-    document.getElementById("menu").scrollIntoView({behavior:"smooth", block:"start"});
-  });
-
-  // Back button
-  document.getElementById("backBtn").addEventListener("click", (e) => {
-    e.preventDefault();
-    document.getElementById("top").scrollIntoView({behavior:"smooth", block:"start"});
-  });
-</script>
-</body>
-</html>
+/* Buttons */
+.actions{
+  margin-top:26px;
+  display:grid;
