--- a/index.html
+++ b/index.html
@@ -209,3 +209,212 @@ h1{
 .actions{
   margin-top:26px;
   display:grid;
+  gap:12px;
+  position:relative;
+  z-index:2;
+}
+.btn{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:10px;
+  padding:14px 18px;
+  border-radius:999px;
+  text-decoration:none;
+  font-weight:800;
+  border:1px solid rgba(255,255,255,0.18);
+  background: rgba(255,255,255,0.07);
+  color:var(--text);
+  transition: transform .18s ease, background .18s ease, border-color .18s ease;
+}
+.btn:hover{
+  transform: translateY(-2px);
+  background: rgba(255,255,255,0.12);
+  border-color: rgba(243,199,122,0.30);
+}
+
+.btnGold{
+  border-radius:16px;
+  padding:16px 18px;
+  background: linear-gradient(180deg, var(--gold), var(--gold2));
+  color:#2a0b3a;
+  border:1px solid rgba(243,199,122,0.60);
+  box-shadow: 0 14px 35px rgba(0,0,0,0.25);
+}
+.btnGold:hover{ filter:brightness(1.03); }
+
+.smallNote{
+  margin-top:14px;
+  font-size:12px;
+  color:rgba(255,255,255,0.62);
+  position:relative;
+  z-index:2;
+}
+
+/* ===== Menu Section with Fade Transition ===== */
+.menuWrap{
+  margin:22px auto 0;
+  width:min(900px,100%);
+  display:none;
+  opacity:0;
+  transform: translateY(18px);
+}
+.menuWrap.show{
+  display:block;
+  animation: menuIn .6s ease forwards;
+}
+@keyframes menuIn{ to{ opacity:1; transform: translateY(0); } }
+
+.menuCard{
+  margin-top:18px;
+  border-radius:26px;
+  border:1px solid rgba(255,255,255,0.14);
+  background: rgba(255,255,255,0.06);
+  box-shadow: var(--shadow);
+  backdrop-filter: blur(14px);
+  padding:14px;
+}
+.menuTop{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  gap:10px;
+  padding:6px 6px 12px;
+}
+.menuTitle{ margin:0; font-size:16px; font-weight:900; color:rgba(255,255,255,0.92); }
+.backBtn{
+  text-decoration:none;
+  color:var(--text);
+  font-weight:900;
+  border:1px solid rgba(255,255,255,0.18);
+  background: rgba(255,255,255,0.06);
+  padding:10px 12px;
+  border-radius:14px;
+  transition:transform .18s ease, background .18s ease;
+}
+.backBtn:hover{ transform: translateY(-2px); background: rgba(255,255,255,0.12); }
+
+.menuImg{
+  width:100%;
+  height:auto;
+  display:block;
+  border-radius:20px;
+  border:1px solid rgba(255,255,255,0.12);
+  box-shadow: 0 18px 45px rgba(0,0,0,0.34);
+  margin:14px 0;
+  background: rgba(255,255,255,0.03);
+}
+
+/* Sticky WhatsApp button */
+.whatsapp{
+  position:fixed;
+  right:16px;
+  bottom:16px;
+  z-index:1000;
+  text-decoration:none;
+  display:flex;
+  align-items:center;
+  gap:10px;
+  padding:12px 14px;
+  border-radius:999px;
+  background: rgba(37, 211, 102, 0.92);
+  color:white;
+  font-weight:900;
+  border:1px solid rgba(255,255,255,0.18);
+  box-shadow: 0 18px 45px rgba(0,0,0,0.35);
+  transition: transform .18s ease, filter .18s ease;
+}
+.whatsapp:hover{ transform: translateY(-2px); filter: brightness(1.03); }
+
+@media (max-width:520px){
+  .card{padding:44px 18px 26px}
+  h1{font-size:28px}
+  .dervish{width:140px}
+  .menuTop{flex-direction:column; align-items:flex-start}
+  .backBtn{width:100%; text-align:center}
+}
+</style>
+</head>
+
+<body>
+  <div class="particles"></div>
+
+  <!-- Loading overlay -->
+  <div class="loaderWrap" id="loader">
+    <div class="loader"></div>
+  </div>
+
+  <!-- WhatsApp button -->
+  <a class="whatsapp" target="_blank"
+     href="https://wa.me/96898183175?text=Hello%20Rumi%20Caf%C3%A9%2C%20I%20want%20to%20order%20please.">
+     💬 WhatsApp Order
+  </a>
+
+  <main class="page" id="page">
+    <div class="container">
+
+      <!-- Premium cover card -->
+      <section class="card" id="top">
+        <div class="glow"></div>
+        <div class="goldLineTop"></div>
+        <div class="goldLineBottom"></div>
+        <div class="goldDot top"></div>
+        <div class="goldDot bottom"></div>
+
+        <!-- Keep your same file name -->
+        <img src="dervish.png" class="dervish dervishSoft" alt="Rumi Dervish">
+
+        <h1>Rumi Café</h1>
+        <div class="tagline">Where Flavor Meets Elegance</div>
+        <div class="locText">📍 Al Mawaleh</div>
+
+        <div class="actions">
+          <a class="btn" href="https://maps.app.goo.gl/or8hHa5wkgUBgxMdA" target="_blank">📍 Al Mawaleh – View Location</a>
+          <a class="btn" href="https://www.instagram.com/rumi_cafee" target="_blank">📸 Follow on Instagram</a>
+          <a class="btn btnGold" href="#menu" id="openMenuBtn">🍔 View Menu</a>
+        </div>
+
+        <div class="smallNote">Tip: Tap “View Menu” to open the full menu pages.</div>
+      </section>
+
+      <!-- Menu section -->
+      <div class="menuWrap" id="menuWrap">
+        <section class="menuCard" id="menu">
+          <div class="menuTop">
+            <h2 class="menuTitle">Rumi Café Menu</h2>
+            <a class="backBtn" href="#top" id="backBtn">⬆ Back to Top</a>
+          </div>
+
+          <img class="menuImg" src="1.png" alt="Menu page 1">
+          <img class="menuImg" src="2.png" alt="Menu page 2">
+        </section>
+      </div>
+
+    </div>
+  </main>
+
+<script>
+  // Loading animation (hide when page loaded)
+  window.addEventListener("load", () => {
+    document.getElementById("loader").classList.add("hide");
+    document.getElementById("page").classList.add("loaded");
+  });
+
+  // Smooth fade transition to menu
+  const openBtn = document.getElementById("openMenuBtn");
+  const menuWrap = document.getElementById("menuWrap");
+  const backBtn = document.getElementById("backBtn");
+
+  openBtn.addEventListener("click", (e) => {
+    e.preventDefault();
+    menuWrap.classList.add("show");
+    document.getElementById("menu").scrollIntoView({behavior:"smooth", block:"start"});
+  });
+
+  backBtn.addEventListener("click", (e) => {
+    e.preventDefault();
+    document.getElementById("top").scrollIntoView({behavior:"smooth", block:"start"});
+  });
+</script>
+</body>
+</html>
